# zeroshot-linear

./: README.md  pyproject.toml
src/zslinear/: __init__.py  model.py
src/zslinear/utils/: logging.py
tests/: test_core.py  test_model.py  test_regressor.py  test_save_artifact.py
