[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zslinear"
version = "0.1.0"
description = "Zero-shot linear classifiers for bioactivity prediction"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Your Name", email="you@ersilia.io"}
]
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.21",
  "scikit-learn>=1.3",
  "loguru>=0.6",
  "rich>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]
onnx = [
  "onnx>=1.14",
  "skl2onnx>=1.15",
  "onnxruntime>=1.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks slow tests (deselect with '-m not slow')"]

